--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -261,3 +261,6 @@ h1.realty-title
 .pick-filter .lh-icon:hover:before
     color: $lightish-blue
     transition: .2s
+
+.realty-search-content
+    margin-top: 40px
