--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -278,6 +278,13 @@ label span
     margin: 15px
     overflow: hidden
 
+.dropzone-wrap > .dz-preview:first-child .set-main-photo
+    display: none
+
+.dropzone-wrap > .dz-preview .rotate-photo i:before
+    font-size: 12px
+    color: $white-two
+
 .dropzone-wrap .dz-details
     margin: 0
     padding: 5px
