--- a/public/sass/header.sass
+++ b/public/sass/header.sass
@@ -85,7 +85,7 @@
 .header-filter
     max-width: 1272px
     width: 100%
-    height: 50px
+    height: 54px
     background: $white
     margin-bottom: 68px
     text-align: left
@@ -254,9 +254,10 @@
 
 .city-question-popup
     position: absolute
-    top: 181px
+    top: 162px
     background: #fff
     padding: 20px 30px
+    margin-left: 60px
     @include border-radius(4px)
 
 .col-city
@@ -297,3 +298,6 @@ li.header-search.active
 
 .header-additional-menu > li.header-search input[type=text]
     padding: 0 75px 0 30px
+
+.city-question-no:hover
+    background: none
