--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -21,6 +21,10 @@
     margin-top: -2px
     display: inline-block
 
+.lh-icon-update:before
+    content: "\e923"
+    color: #495aff
+
 .lh-icon-toast-error .path1:before
     content: "\e910"
     color: #ffd93b
