--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -39,6 +39,10 @@
   margin-top: -2px;
   display: inline-block; }
 
+.lh-icon-update:before {
+  content: "";
+  color: #495aff; }
+
 .lh-icon-toast-error .path1:before {
   content: "";
   color: #ffd93b; }
@@ -252,8 +256,17 @@ h1 {
 .pagination {
   margin: 0 auto 20px auto; }
 
+.rotate-90 {
+  transform: rotate(90deg); }
+
+.rotate-180 {
+  transform: rotate(180deg); }
+
+.rotate-270 {
+  transform: rotate(270deg); }
+
 .btn, .btn-disabled {
-  padding: 10px 17px;
+  padding: 18px 32px;
   color: #495aff;
   vertical-align: middle;
   line-height: 16px;
@@ -269,8 +282,10 @@ h1 {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px; }
 
-.btn:hover, .btn-disabled:hover {
-  text-decoration: none; }
+.btn:hover, .btn-disabled:hover, .btn.active, .active.btn-disabled {
+  text-decoration: none;
+  background: #4251e5;
+  color: #f6f6f6; }
 
 .btn-primary, .btn.active, .active.btn-disabled {
   background: #495aff;
@@ -280,9 +295,6 @@ h1 {
   background-color: #49c628;
   border-color: #49c628;
   color: #f6f6f6; }
-
-.btn.active:hover, .active.btn-disabled:hover {
-  background: #4251e5; }
 
 .btn-disabled {
   color: #c4c4c4;
@@ -699,6 +711,13 @@ label span {
   margin: 15px;
   overflow: hidden; }
 
+.dropzone-wrap > .dz-preview:first-child .set-main-photo {
+  display: none; }
+
+.dropzone-wrap > .dz-preview .rotate-photo i:before {
+  font-size: 12px;
+  color: #f6f6f6; }
+
 .dropzone-wrap .dz-details {
   margin: 0;
   padding: 5px;
@@ -1054,7 +1073,7 @@ h1 + form.realty-create-form {
 .header-filter {
   max-width: 1272px;
   width: 100%;
-  height: 50px;
+  height: 54px;
   background: #ffffff;
   margin-bottom: 68px;
   text-align: left;
@@ -1229,9 +1248,10 @@ h1 + form.realty-create-form {
 
 .city-question-popup {
   position: absolute;
-  top: 181px;
+  top: 162px;
   background: #fff;
   padding: 20px 30px;
+  margin-left: 60px;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px; }
@@ -1276,6 +1296,9 @@ li.header-search.active {
 
 .header-additional-menu > li.header-search input[type=text] {
   padding: 0 75px 0 30px; }
+
+.city-question-no:hover {
+  background: none; }
 
 .slick-slide {
   height: initial; }
@@ -1907,6 +1930,9 @@ h1.realty-title {
 .pick-filter .lh-icon:hover:before {
   color: #495aff;
   transition: 0.2s; }
+
+.realty-search-content {
+  margin-top: 40px; }
 
 .toasts-wrap {
   position: fixed;
