--- a/public/sass/core.sass
+++ b/public/sass/core.sass
@@ -40,3 +40,12 @@ h1
 
 .pagination
     margin: 0 auto 20px auto
+
+.rotate-90
+    transform: rotate(90deg)
+
+.rotate-180
+    transform: rotate(180deg)
+
+.rotate-270
+    transform: rotate(270deg)
