--- a/public/sass/core.sass
+++ b/public/sass/core.sass
@@ -49,3 +49,12 @@ h1
 
 .rotate-270
     transform: rotate(270deg)
+
+.breadcrumbs
+    margin-top: 50px
+    color: $dark-navy-blue
+    font-size: 15px
+    line-height: 20px
+
+.breadcrumbs span.separator
+    color: $warm-grey
