--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -265,6 +265,15 @@ h1 {
 .rotate-270 {
   transform: rotate(270deg); }
 
+.breadcrumbs {
+  margin-top: 50px;
+  color: #000b28;
+  font-size: 15px;
+  line-height: 20px; }
+
+.breadcrumbs span.separator {
+  color: #a1a1a1; }
+
 .btn, .btn-disabled {
   padding: 18px 32px;
   color: #495aff;
@@ -545,13 +554,12 @@ span.select2-selection.select2-selection--single, .select2-container--default .s
   -webkit-border-radius: 0 0 4px 4px;
   -moz-border-radius: 0 0 4px 4px; }
 
-.realty-create-wrap {
+.realty-form-wrap {
   max-width: 1194px;
   width: 100%;
   margin: 0 auto; }
 
 .realty-create-form {
-  max-width: 890px;
   width: 100%;
   margin: 50px auto;
   padding: 0; }
@@ -827,6 +835,44 @@ h1 + form.realty-create-form {
 
 .house-classes label {
   margin-right: 15px; }
+
+.realty-create-main-lists > ul {
+  max-width: 294px;
+  width: 100%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  box-sizing: content-box; }
+
+.realty-create-main-lists > ul:not(:last-child) {
+  margin-right: 30px;
+  padding-right: 30px;
+  border-right: 1px solid #eee; }
+
+.realty-create-main-lists {
+  width: 100%;
+  display: inline-block; }
+
+.realty-create-main-lists > ul > li {
+  list-style: none;
+  margin-bottom: 10px;
+  height: 38px;
+  line-height: 38px;
+  cursor: pointer;
+  padding: 0 30px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px; }
+
+.realty-create-main-lists > ul:not(:last-child) > li:hover, .realty-create-main-lists > ul:not(:last-child) > li.active {
+  background: rgba(73, 90, 255, 0.15);
+  font-weight: bold;
+  color: #495aff; }
+
+.realty-create-main-lists > ul:last-child > li:hover, .realty-create-main-lists > ul:last-child > li.active {
+  background: rgba(73, 198, 40, 0.15);
+  font-weight: bold;
+  color: #495aff; }
 
 .login-params {
   margin: 10px 0 30px 0 !important;
