--- a/public/sass/color.sass
+++ b/public/sass/color.sass
@@ -1,5 +1,5 @@
 $dark-navy-blue: #000b28
-$lightish-blue: #495aff
+$lightish-blue: #048FF2
 $pinkish-grey: #c4c4c4
 $pinkish-grey-54: rgba(rgb(196,196,196), .54)
 $greyish-brown: #5a5a5a
@@ -9,7 +9,8 @@ $white-two: #f6f6f6
 $black: #1a1a1a
 $black0: #000000
 $warm-grey: #a1a1a1
-$toxic-green: #49c628
+$toxic-green: #73c42d
 $pinkish-grey-two: #bdbdbd
 $white-three: #dfdfdf
 $warm-blue: #4251e5
+$pale-grey: #f0f4f7
