--- a/public/sass/core.sass
+++ b/public/sass/core.sass
@@ -3,13 +3,12 @@
 
 body
   background: $white
-  max-width: 1900px
   width: 100%
-  margin: 0 auto
   font-family: "AvenirNextCyr", sans-serif
   font-size: 15px
   line-height: 20px
   color: $dark-navy-blue
+  margin: 80px 0 0 0
 
 a
   text-decoration: none
@@ -25,7 +24,6 @@ b
     font-weight: 600
 
 .wrap
-    padding: 0 56px
     max-width: 100%
 
 h1
@@ -58,3 +56,8 @@ h1
 
 .breadcrumbs span.separator
     color: $warm-grey
+
+.wrap-default
+    max-width: 1200px
+    width: 100%
+    margin: 0 auto
