--- a/public/sass/buttons.sass
+++ b/public/sass/buttons.sass
@@ -1,9 +1,9 @@
 .btn
-    padding: 18px 32px
+    padding: 16px 32px
     color: $lightish-blue
     vertical-align: middle
-    line-height: 16px
-    border: solid 1px $lightish-blue
+    line-height: 18px
+    border: 0
     background: transparent
     cursor: pointer
     display: inline-block
@@ -11,7 +11,6 @@
     font-family: "AvenirNextCyr", sans-serif
     font-size: 15px
     transition: .4s
-    @include border-radius(4px)
 
 .btn:hover, .btn.active
     text-decoration: none
@@ -24,7 +23,6 @@
 
 .btn-success
     background-color: $toxic-green
-    border-color: $toxic-green
     color: $white-two
 
 .btn-disabled
